--- a/r-package/grf/NAMESPACE
+++ b/r-package/grf/NAMESPACE
@@ -20,6 +20,7 @@ export(best_linear_projection)
 export(boosted_regression_forest)
 export(causal_forest)
 export(custom_forest)
+export(marginal_forest)
 export(get_sample_weights)
 export(get_tree)
 export(instrumental_forest)
