--- a/r-package/grf/NAMESPACE
+++ b/r-package/grf/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,grf_tree)
 S3method(predict,boosted_regression_forest)
 S3method(predict,causal_forest)
 S3method(predict,custom_forest)
+S3method(predict,marginal_forest)
 S3method(predict,instrumental_forest)
 S3method(predict,ll_regression_forest)
 S3method(predict,quantile_forest)
